--- a/translation/en.json
+++ b/translation/en.json
@@ -7,6 +7,7 @@
   "no-plans": "Click plus button to add a plan",
   "no-tasks-done": "Click plus button to add a task to do",
   "no-items-bought": "Click plus button to add a item to buy",
+  "income": "Will you support me with coffee? :)",
 
   "enter-habit": "Enter habit",
   "enter-weight": "Enter weight",
