--- a/translation/pl.json
+++ b/translation/pl.json
@@ -7,6 +7,7 @@
   "no-plans": "Kliknij przycisk plus, aby dodać plan",
   "no-tasks-done": "Kliknij przycisk plus, aby dodać zadanie do zrobienia",
   "no-items-bought": "Kliknij przycisk plus, aby dodać rzecz do kupienia",
+  "income": "Czy jako wsparcie postawisz mi kawusię? :)",
 
   "enter-habit": "Wpisz nawyk",
   "enter-weight": "Wpisz wagę",
