--- a/translation/en.json
+++ b/translation/en.json
@@ -1,4 +1,5 @@
 {
+  "welcome": "Welcome to Dooit, choose your settings",
   "no-habits": "Click plus button to add a habit",
   "play-habits": "Click play button to start your day",
   "done-habits": "All done today!",
