--- a/translation/pl.json
+++ b/translation/pl.json
@@ -1,4 +1,5 @@
 {
+  "welcome": "Witam w Dooit, wybierz swoje ustawienia",
   "no-habits": "Kliknij przycisk plus, aby dodać nawyk",
   "play-habits": "Kliknij przycisk start, aby zacząć dzień",
   "done-habits": "Wszystko dzisiaj zrobione!",
