--- a/translation/en.json
+++ b/translation/en.json
@@ -2,7 +2,7 @@
   "welcome": "Welcome to Dooit, choose your settings",
   "no-habits": "Click plus button to add a habit",
   "play-habits": "Click play button to start your day",
-  "done-habits": "All done today!",
+  "done-habits": "All done! Below tomorrow's plans",
   "no-weights": "Click plus button to add your weight",
   "no-costs": "Click plus button to add a cost",
   "no-plans": "Click plus button to add a plan",
