--- a/translation/pl.json
+++ b/translation/pl.json
@@ -2,7 +2,7 @@
   "welcome": "Witam w Dooit, wybierz swoje ustawienia",
   "no-habits": "Kliknij przycisk plus, aby dodać nawyk",
   "play-habits": "Kliknij przycisk start, aby zacząć dzień",
-  "done-habits": "Wszystko dzisiaj zrobione!",
+  "done-habits": "Wszystko zrobione! Poniżej plany na jutro",
   "no-weights": "Kliknij przycisk plus, aby dodać swoją wagę",
   "no-costs": "Kliknij przycisk plus, aby dodać koszt",
   "no-plans": "Kliknij przycisk plus, aby dodać plan",
