--- a/translation/en.json
+++ b/translation/en.json
@@ -17,6 +17,7 @@
   "enter-task": "Enter task",
   "enter-item": "Enter item",
 
+  "initial-weight": "Initial weight",
   "days": "days",
   "day": "day",
   "done": "done",
