--- a/translation/pl.json
+++ b/translation/pl.json
@@ -17,6 +17,7 @@
   "enter-task": "Wpisz zadanie",
   "enter-item": "Wpisz produkt",
 
+  "initial-weight": "Waga początkowa",
   "days": "dni",
   "day": "dzień",
   "done": "zrobione",
