--- a/translation/en.json
+++ b/translation/en.json
@@ -8,6 +8,7 @@
   "no-items-bought": "Add item",
   "income": "Will you support me with coffee? :)",
 
+  "finish-day": "Do you end the day?",
   "enter-habit": "Enter habit",
   "enter-weight": "Enter weight",
   "enter-cost": "Enter cost",
