--- a/translation/pl.json
+++ b/translation/pl.json
@@ -8,6 +8,7 @@
   "no-items-bought": "Dodaj produkt",
   "income": "Czy jako wsparcie postawisz mi kawusię? :)",
 
+  "finish-day": "Czy kończysz dzień?",
   "enter-habit": "Wpisz nawyk",
   "enter-weight": "Wpisz wagę",
   "enter-cost": "Wpisz koszt",
