--- a/translation/en.json
+++ b/translation/en.json
@@ -6,7 +6,8 @@
   "no-habits": "Add habit",
   "no-tasks-done": "Add task",
   "no-items-bought": "Add item",
-  "income": "Will you support me with coffee? :)",
+  "contact": "Would you write to me on Linkedin?",
+  "income": "Would you support me with coffee?",
 
   "finish-day": "Do you end the day?",
   "enter-habit": "Enter habit",
