--- a/translation/pl.json
+++ b/translation/pl.json
@@ -6,7 +6,8 @@
   "no-habits": "Dodaj nawyk",
   "no-tasks-done": "Dodaj zadanie",
   "no-items-bought": "Dodaj produkt",
-  "income": "Czy jako wsparcie postawisz mi kawusię? :)",
+  "contact": "Czy chcesz do mnie napisać na Linkedin?",
+  "income": "Czy jako wsparcie postawisz mi kawusię?",
 
   "finish-day": "Czy kończysz dzień?",
   "enter-habit": "Wpisz nawyk",
