--- a/translation/en.json
+++ b/translation/en.json
@@ -2,17 +2,27 @@
   "welcome": "Welcome to Dooit, choose your settings",
   "no-weights": "Add weight",
   "no-costs": "Add cost",
+  "no-budgets": "Add budget",
   "no-plans": "Add plan",
   "no-habits": "Add habit",
   "no-tasks-done": "Add task",
   "no-items-bought": "Add item",
   "contact": "Would you write to me on Linkedin?",
-  "income": "Would you support me with coffee?",
+  "coffee": "Would you support me with coffee?",
 
   "finish-day": "Do you end the day?",
   "enter-habit": "Enter habit",
   "enter-weight": "Enter weight",
   "enter-cost": "Enter cost",
+  "entry-type": "Entry type",
+  "expense": "Expense",
+  "income": "Income",
+  "entry-period": "Repeatability",
+  "monthly": "Monthly",
+  "yearly": "Yearly",
+  "single": "Single",
+  "enter-name": "Enter name",
+  "enter-amount": "Enter amount",
   "enter-plan": "Enter plan",
   "set-time": "Set time",
   "set-days": "Daily",
