--- a/translation/pl.json
+++ b/translation/pl.json
@@ -2,17 +2,27 @@
   "welcome": "Witam w Dooit, wybierz swoje ustawienia",
   "no-weights": "Dodaj wagę",
   "no-costs": "Dodaj koszt",
+  "no-budgets": "Dodaj budżet",
   "no-plans": "Dodaj plan",
   "no-habits": "Dodaj nawyk",
   "no-tasks-done": "Dodaj zadanie",
   "no-items-bought": "Dodaj produkt",
   "contact": "Czy chcesz do mnie napisać na Linkedin?",
-  "income": "Czy jako wsparcie postawisz mi kawusię?",
+  "coffee": "Czy jako wsparcie postawisz mi kawusię?",
 
   "finish-day": "Czy kończysz dzień?",
   "enter-habit": "Wpisz nawyk",
   "enter-weight": "Wpisz wagę",
   "enter-cost": "Wpisz koszt",
+  "entry-type": "Typ wpisu",
+  "expense": "Wydatek",
+  "income": "Zarobek",
+  "entry-period": "Powtarzalność",
+  "monthly": "Miesięcznie",
+  "yearly": "Rocznie",
+  "single": "Jednorazowo",
+  "enter-name": "Wpisz nazwę",
+  "enter-amount": "Wpisz kwotę",
   "enter-plan": "Wpisz plan",
   "set-time": "Ustaw czas",
   "set-days": "Codziennie",
