--- a/translation/en.json
+++ b/translation/en.json
@@ -1,5 +1,6 @@
 {
   "welcome": "Welcome to Dooit, choose your settings",
+  "no-today": "Here you will see today's plans",
   "no-weights": "Add your weight",
   "no-menu": "Add meal plan",
   "no-costs": "Add cost not included in budget",
