--- a/translation/pl.json
+++ b/translation/pl.json
@@ -1,5 +1,6 @@
 {
   "welcome": "Witam w Dooit, wybierz swoje ustawienia",
+  "no-today": "Tutaj zobaczysz dzisiejsze plany",
   "no-weights": "Dodaj swoją wagę",
   "no-menu": "Dodaj plan posiłków",
   "no-costs": "Dodaj koszt nieuwzględniony w budżecie",
