--- a/translation/pl.json
+++ b/translation/pl.json
@@ -12,6 +12,7 @@
     "delete-habit": "Usuń nawyk",
     "filter-habits": "Filtruj nawyki",
     "no-habits": "Brak nawyków",
+    "no-current-habit": "Brak aktualnego nawyku",
     "choose-date": "Wybierz datę",
     "contact-author": "Kontakt z autorem",
     "support-author": "Wesprzyj autora"
