--- a/translation/pl.json
+++ b/translation/pl.json
@@ -1,7 +1,7 @@
 {
   "view": {
     "loading": "Ładowanie",
-    "home": "Główna",
+    "home": "Dzień",
     "habits": "Nawyki",
     "stats": "Statystyki",
     "settings": "Ustawienia"
