--- a/translation/en.json
+++ b/translation/en.json
@@ -61,6 +61,7 @@
     "target-measure": "Target measure"
   },
   "table": {
+    "average": "Average",
     "date": "Date",
     "measure": "Measure",
     "day": "Day",
