--- a/translation/pl.json
+++ b/translation/pl.json
@@ -61,6 +61,7 @@
     "target-measure": "Docelowy pomiar"
   },
   "table": {
+    "average": "Średnia",
     "date": "Data",
     "measure": "Pomiar",
     "day": "Dzień",
