--- a/translation/pl.json
+++ b/translation/pl.json
@@ -136,7 +136,7 @@
   },
   "onboarding": {
     "welcome": "Zapraszam",
-    "to-app": "dp aplikacji Dooit",
+    "to-app": "do aplikacji Dooit",
     "start": "Rozpocznij",
     "option": {
       "1": {
