--- a/translation/en.json
+++ b/translation/en.json
@@ -1,7 +1,7 @@
 {
   "view": {
     "loading": "Loading",
-    "home": "Dzień",
+    "home": "Day",
     "habits": "Habits",
     "stats": "Stats",
     "settings": "Settings"
