--- a/translation/pl.json
+++ b/translation/pl.json
@@ -18,6 +18,7 @@
     "support-author": "Wesprzyj autora"
   },
   "settings": {
+    "version": "Wersja",
     "language": "Język",
     "en": "Angielski",
     "pl": "Polski",
