--- a/translation/pl.json
+++ b/translation/pl.json
@@ -139,7 +139,7 @@
     },
     "progress-unit": {
       "water": "szklanek",
-      "book": "stron",
+      "book": "str",
       "workout": "kg"
     }
   },
